--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 				<path d="M4.916.3v21.017l-3.563-3.564L.25 18.856 5.7 24.3l5.45-5.444-1.102-1.103-3.564 3.564V.3z"/>
 			</symbol>
 		</svg>
-		<main>
+	<section class="scrollable">
 			<div class="message">View on a larger screen is recommended</div>
 			<!-- Outer grid (header, title, etc.) -->
-			<div class="grid grid--outer">
+			<div class="grid-scrollable grid--outer">
 				<header class="codrops-header">
 					<div class="codrops-links">
 						<a class="codrops-icon codrops-icon--drop" href="#" title="Back to the article"><svg class="icon icon--drop"><use xlink:href="#icon-drop"></use></svg></a>
@@ -56,15 +56,15 @@
 				</div>
 				<a href="index.html" class="menu-item zero-item">Home</a>
 				<a href="works.html" class="menu-item first-item">Works</a>
-				<a href="#" class="menu-item second-item">Curriculum Vitae</a>
-				<a href="#" class="menu-item last-item">Contact</a>
+				<a href="cv.html" class="menu-item second-item">Curriculum Vitae</a>
+				<a href="contact.html" class="menu-item last-item">Contact</a>
 				<div class="side">
 					<span class="side__content">Produced in London</span>
 					<span class="side__content">Made by Brain Gap</span>
 				</div>
 			</div>
 			<div class="my_pic-container"><img class="my-pic" src="img/Elena-pic.png"></div>
-		</main>
+		</section>
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/TweenMax.min.js"></script>
 		<script src="js/demo.js"></script>
