--- a/works.html
+++ b/works.html
@@ -67,7 +67,7 @@
 			<a href="index.html" class="menu-item zero-item">Home</a>
 			<a href="works.html" class="menu-item first-item">Works</a>
 			<a href="cv.html" class="menu-item second-item">Curriculum Vitae</a>
-			<a href="#" class="menu-item last-item">Contact</a>
+			<a href="contact.html" class="menu-item last-item">Contact</a>
 			<div class="side">
 				<span class="side__content">Produced in London</span>
 				<span class="side__content">Made by Brain Gap</span>
@@ -123,17 +123,19 @@
 							<iframe src="Banners/728x90-Blue-Funnel-AdRoll-DE/728x90-Blue-Funnel-DE.html" width="728" height="90"></iframe>	
 						</div>
 						<div>
-							<p class="label">Size: 160 x 600 px</p>
-							<iframe src="Banners/160x600-Blue-Funnel-AdRoll-DE/160x600-Blue-Funnel-DE.html" width="160" height="600"></iframe>
+							<p class="label">Size: 320 x 50 px</p>
+							<iframe src="Banners/320x50-Blue-Funnel-AdRoll-DE/320x50-Blue-Funnel-DE.html" width="320" height="50"></iframe>
 						</div>
-						<div class="right-column">
-							<p class="label">Size: 300 x 250 px</p>
-							<iframe src="Banners/300x250-Blue-Funnel-AdRoll-DE/300x250-Blue-Funnel-DE.html" width="300" height="250"></iframe>
-							<p class="label">Size: 300 x 600 px</p>
-							<iframe src="Banners/300x600-Blue-Funnel-AdRoll-DE/300x600-Blue-Funnel-DE.html" width="300" height="600"></iframe>
-							<div>
-								<p class="label">Size: 320 x 50 px</p>
-								<iframe src="Banners/320x50-Blue-Funnel-AdRoll-DE/320x50-Blue-Funnel-DE.html" width="320" height="50"></iframe>
+						<div>
+							<div class="flex">
+								<p class="label">Size: 160 x 600 px</p>
+								<iframe src="Banners/160x600-Blue-Funnel-AdRoll-DE/160x600-Blue-Funnel-DE.html" width="160" height="600"></iframe>
+							</div>
+							<div class="column">
+								<p class="label">Size: 300 x 250 px</p>
+								<iframe src="Banners/300x250-Blue-Funnel-AdRoll-DE/300x250-Blue-Funnel-DE.html" width="300" height="250"></iframe>
+								<p class="label">Size: 300 x 600 px</p>
+								<iframe src="Banners/300x600-Blue-Funnel-AdRoll-DE/300x600-Blue-Funnel-DE.html" width="300" height="600"></iframe>
 							</div>
 						</div>
 					</div>
