modified marketing page

--- a/works.html
+++ b/works.html
@@ -42,78 +42,92 @@
 			<div class="fullview__item" style="background-color: #ffffff">
 				<div class="showcase-container">
 					<div class="first-view">
-					<div class="fullview__item-titlewrap">
-						<h3 class="fullview__item-title">Marketing Campaign</h3>
-						<p class="fullview__item-description">design / direction / development</p>
-						<div class="fullview__details-container">
-							<h3 class="fullview__details">Year</h3>
-							<ul class="fullview__year-list">
-								<li>2017</li>
-							</ul>
+						<div class="fullview__item-titlewrap">
+							<h3 class="fullview__item-title">Marketing Campaign</h3>
+							<p class="fullview__item-description">design / direction / development</p>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">Year</h3>
+								<ul class="fullview__year-list">
+									<li>2017</li>
+								</ul>
+							</div>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">DELIVERABLES</h3>
+								<ul class="fullview__year-list">
+									<li>Animation Design</li>
+									<li>Creative Direction</li>
+									<li>HTML5 Banner Development</li>
+									<li>Static Banner Design</li>
+								</ul>
+							</div>
+							<div class="fullview__details-container">
+								<h3 class="fullview__details">Tools</h3>
+								<ul class="fullview__year-list">
+									<li>After Effects</li>
+									<li>Adobe Animate</li>
+									<li>Adobe Audition</li>
+									<li>Dreamweaver</li>
+									<li>Illustrator</li>
+									<li>Photoshop</li>
+								</ul>
+							</div>
 						</div>
-						<div class="fullview__details-container">
-							<h3 class="fullview__details">DELIVERABLES</h3>
-							<ul class="fullview__year-list">
-								<li>Animation Design</li>
-								<li>Creative Direction</li>
-								<li>HTML5 Banner Development</li>
-								<li>Static Banner Design</li>
-							</ul>
-						</div>
-						<div class="fullview__details-container">
-							<h3 class="fullview__details">Tools</h3>
-							<ul class="fullview__year-list">
-								<li>After Effects</li>
-								<li>Adobe Animate</li>
-								<li>Adobe Audition</li>
-								<li>Dreamweaver</li>
-								<li>Illustrator</li>
-								<li>Photoshop</li>
-							</ul>
+						<div class="border-top"></div>
+						<div class="player-container">
+							<div class="fullview__item-h3">
+								<h3 class="fullview__item-title">Animation</h3>
+							</div>
+							<div class="player-container-inner">
+								<iframe class="player" src="https://player.vimeo.com/video/275386303" width="350" height="350" frameborder="0" webkitallowfullscreen
+								 mozallowfullscreen allowfullscreen></iframe>
+							</div>
 						</div>
 					</div>
-					<div class="player-container">
-						<div>
-						<iframe class="player" src="https://player.vimeo.com/video/275386303" width="560" height="560" frameborder="0" webkitallowfullscreen
-						 mozallowfullscreen allowfullscreen></iframe>
-						</div>
-						<!-- <img class="player-frame" src="img/Phone-frame.png"> -->
+					<div class="img-full-width-container">
+						<img src="img/ob-pic.png" class="img-full-width">
 					</div>
-				</div>
-					<div class="banner-container flex">
-						<div>
-							<p class="label">Size: 728 x 90 px</p>
-							<iframe src="Banners/728x90-Blue-Funnel-AdRoll-DE/728x90-Blue-Funnel-DE.html" width="728" height="90"></iframe>	
+					<div class="border-top"></div>
+					<div class="fullview__item-h3">
+						<h3 class="fullview__item-title">HTML5 Banners</h3>
+					</div>
+					<div class="centered">
+					<div class="banner-container flex wrap">
+						<div class="flex wrap">
+							<div class="banner" id="b728x90">
+								<p class="label">Size: 728 x 90 px</p>
+								<iframe src="Banners/728x90-Blue-Funnel-AdRoll-DE/728x90-Blue-Funnel-DE.html" width="728" height="90"></iframe>
+							</div>
+							<div class="banner" id="b320x50">
+								<p class="label">Size: 320 x 50 px</p>
+								<iframe src="Banners/320x50-Blue-Funnel-AdRoll-DE/320x50-Blue-Funnel-DE.html" width="320" height="50"></iframe>
+							</div>
 						</div>
-						<div>
-							<p class="label">Size: 320 x 50 px</p>
-							<iframe src="Banners/320x50-Blue-Funnel-AdRoll-DE/320x50-Blue-Funnel-DE.html" width="320" height="50"></iframe>
-						</div>
-						<div>
-							<div class="flex">
+						<div class="flex wrap">
+							<div class="banner" id="b160x600">
 								<p class="label">Size: 160 x 600 px</p>
 								<iframe src="Banners/160x600-Blue-Funnel-AdRoll-DE/160x600-Blue-Funnel-DE.html" width="160" height="600"></iframe>
 							</div>
-							<div class="column">
-								<p class="label">Size: 300 x 250 px</p>
-								<iframe src="Banners/300x250-Blue-Funnel-AdRoll-DE/300x250-Blue-Funnel-DE.html" width="300" height="250"></iframe>
-								<p class="label">Size: 300 x 600 px</p>
-								<iframe src="Banners/300x600-Blue-Funnel-AdRoll-DE/300x600-Blue-Funnel-DE.html" width="300" height="600"></iframe>
+							<div class="flex wrap">
+								<div class="banner" id="b300x600">
+									<p class="label">Size: 300 x 600 px</p>
+									<iframe src="Banners/300x600-Blue-Funnel-AdRoll-DE/300x600-Blue-Funnel-DE.html" width="300" height="600"></iframe>
+								</div>
+								<div class="banner" id="b300x250">
+									<p class="label">Size: 300 x 250 px</p>
+									<iframe src="Banners/300x250-Blue-Funnel-AdRoll-DE/300x250-Blue-Funnel-DE.html" width="300" height="250"></iframe>
+								</div>
 							</div>
 						</div>
 					</div>
-					<p>Hi, I am Elena and I am a Senior Visual Designer at Fonpit, based in Berlin. In 2013 I moved from Ukraine to Germany
-						for work. How can visualisation help you in developing your idea? Why is it even important to visualise an idea and
-						what does it mean? Firstly, there are 2 main phases where you will need a visualisation. Initially for yourself. Secondly,
-						to communicate your idea to investors, partners or customers. In this talk I will share some techniques, which we designers
-						use when creating our works. They will help you to better understand such crucial points as who your target audience
-						is and what these people’s needs and expectations are. These techniques will present your idea under difference angles
-						and shape it to become easy-to-grasp. Zooming-in the general idea, moving to detailed view, creating mind-maps, collecting
-						visuals and combining them into mood-boards: apply these methods and techniques while working at your project and make
-						your complex idea comprehensible
-					</p>
 				</div>
-
+				<div class="border-top"></div>
+				<div class="fullview__item-h3">
+					<h3 class="fullview__item-title">HTML5 Banners</h3>
+				</div>
+				<div class="preview-container">
+					<img src="img/Funnel-preview.png" class="preview">
+				</div>
+				</div>
 			</div>
 			<div class="fullview__item" style="background-image: url(img/2.jpg)">
 				<span class="fullview__item-number">02</span>
