--- a/works.html
+++ b/works.html
@@ -132,7 +132,7 @@
 			<div class="fullview__item" style="background-image: url(img/2.jpg)">
 				<span class="fullview__item-number">02</span>
 				<div class="fullview__item-titlewrap">
-					<h3 class="fullview__item-title">PresentationAnimation</h3>
+					<h3 class="fullview__item-title">Marketing Campaign</h3>
 					<p class="fullview__item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
 						aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
 					<span class="fullview__item-more">more</span>
@@ -147,15 +147,49 @@
 					<span class="fullview__item-more">more</span>
 				</div>
 			</div>
-			<div class="fullview__item" style="background-image: url(img/4.jpg)">
-				<span class="fullview__item-number">04</span>
-				<div class="fullview__item-titlewrap">
-					<h3 class="fullview__item-title">Silence and noise</h3>
-					<p class="fullview__item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-						aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-					<span class="fullview__item-more">more</span>
+			<div class="fullview__item" style="background-color: #ffffff">
+					<div class="showcase-container">
+						<div class="first-view">
+							<div class="fullview__item-titlewrap">
+								<h3 class="fullview__item-title">Hobby Projects</h3>
+								<p class="fullview__item-description">visual art / character design / sculpture</p>
+								<div class="fullview__details-container">
+									<h3 class="fullview__details">Year</h3>
+									<ul class="fullview__year-list">
+										<li>2018</li>
+									</ul>
+								</div>
+								<div class="fullview__details-container">
+									<h3 class="fullview__details">Techniques</h3>
+									<ul class="fullview__year-list">
+										<li>Sculpture</li>
+										<li>Painting</li>
+										<li>Tailoring</li>
+										<li>Drawing</li>
+									</ul>
+								</div>
+								<div class="fullview__details-container">
+									<h3 class="fullview__details">Materials</h3>
+									<ul class="fullview__year-list">
+										<li>Modelling Clay</li>
+										<li>Airbrush</li>
+										<li>Acrylic Colours</li>
+										<li>Line Pens</li>
+									</ul>
+								</div>
+							</div>
+							<div class="border-top"></div>
+						</div>
+						<div class="flex-wrap">
+							<img src="img/Ruby-1.jpg" class="gallery-item">
+							<img src="img/Ruby-2.jpg" class="gallery-item">
+							<img src="img/Ruby-3.jpg" class="gallery-item">
+							<img src="img/Ruby-4.jpg" class="gallery-item">
+							<img src="img/Ruby-5.jpg" class="gallery-item">
+							<img src="img/Ruby-6.jpg" class="gallery-item">
+						</div>
+					</div>
 				</div>
-			</div>
 			<h3 class="fullview__title">Elena Volovicheva</h3>
 		</div>
 		<!--/fullview-->
@@ -165,7 +199,7 @@
 		<div class="grid grid--thumbs">
 			<div class="grid__item" data-revealer-color="#fe0048">
 				<h3 class="grid__item-title">
-					<span>Presentaion Animation</span>
+					<span>Marketing Campaign</span>
 				</h3>
 				<span class="grid__item-number">
 					<span>01</span>
@@ -201,13 +235,13 @@
 			</div>
 			<div class="grid__item" data-revealer-color="#fac92f">
 				<h3 class="grid__item-title">
-					<span>Silence and noise</span>
+					<span>Hobby Projects</span>
 				</h3>
 				<span class="grid__item-number">
 					<span>04</span>
 				</span>
 				<div class="grid__item-imgwrap">
-					<img class="grid__item-img" src="img/thumb4.jpg" alt="Some image" />
+					<img class="grid__item-img" src="img/thumb4.jpg" alt="Hobby Project" />
 					<div class="grid__item-bg" style="background-image: url(img/thumb4.jpg)"></div>
 				</div>
 			</div>
