--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="grid-scrollable grid--outer">
 			<div class="title-wrap">
 				<h2 class="title">Elena Volovicheva</h2>
-				<span class="profession">designer &amp; frontend-developer</span>
+				<span class="profession">designer / artist / frontend-developer</span>
 				<span class="subtitle">portfolio</span>
 				<span class="year">2018</span>
 				<div class="my_story-wrap">
@@ -39,8 +39,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="my_pic-container">
-			<img class="my-pic" src="img/Elena-pic.png">
+		<div class="my_pic-container" style="background-image: url(img/Elena-pic-3.png)">
+			<!-- <img class="my-pic" src="img/Elena-pic-3.png"> -->
 		</div>
 	</section>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
