--- a/works.html
+++ b/works.html
@@ -31,7 +31,7 @@
 		<div class="grid grid--outer">
 			<div class="title-wrap">
 				<h2 class="title">Elena Volovicheva</h2>
-				<span class="profession">designer &amp; frontend-developer</span>
+				<span class="profession">designer / artist / frontend-developer</span>
 				<span class="subtitle">portfolio</span>
 				<span class="year">2018</span>
 			</div>
@@ -58,6 +58,7 @@
 									<li>Creative Direction</li>
 									<li>HTML5 Banner Development</li>
 									<li>Static Banner Design</li>
+									<li>Web Design</li>
 								</ul>
 							</div>
 							<div class="fullview__details-container">
@@ -68,7 +69,8 @@
 									<li>Adobe Audition</li>
 									<li>Dreamweaver</li>
 									<li>Illustrator</li>
-									<li>Photoshop</li>
+									<li>InVision</li>
+									<li>Sketch</li>
 								</ul>
 							</div>
 						</div>
@@ -122,7 +124,7 @@
 				</div>
 				<div class="border-top"></div>
 				<div class="fullview__item-h3">
-					<h3 class="fullview__item-title">HTML5 Banners</h3>
+					<h3 class="fullview__item-title">Funnel</h3>
 				</div>
 				<div class="preview-container">
 					<img src="img/Funnel-preview.png" class="preview">
@@ -138,20 +140,49 @@
 					<span class="fullview__item-more">more</span>
 				</div>
 			</div>
-			<div class="fullview__item" style="background-image: url(img/3.jpg)">
-				<span class="fullview__item-number">03</span>
-				<div class="fullview__item-titlewrap">
-					<h3 class="fullview__item-title">Black revelations</h3>
-					<p class="fullview__item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-						aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
-					<span class="fullview__item-more">more</span>
+			<div class="fullview__item" style="background-color: #ffffff">
+					<div class="showcase-container">
+						<div class="first-view">
+								<div class="fullview__item-titlewrap">
+										<h3 class="fullview__item-title">Dance Network</h3>
+										<p class="fullview__item-description">design / direction / development</p>
+										<div class="fullview__details-container">
+											<h3 class="fullview__details">Year</h3>
+											<ul class="fullview__year-list">
+												<li>2018</li>
+											</ul>
+										</div>
+										<div class="fullview__details-container">
+											<h3 class="fullview__details">DELIVERABLES</h3>
+											<ul class="fullview__year-list">
+												<li>UX</li>
+												<li>Graphic Design</li>
+												<li>UI Design</li>
+											</ul>
+										</div>
+										<div class="fullview__details-container">
+											<h3 class="fullview__details">Tools</h3>
+											<ul class="fullview__year-list">
+												<li>Sketch</li>
+												<li>Photoshop</li>
+												<li>Illustrator</li>
+												<li>Invision</li>
+												<li>Vue.js</li>
+											</ul>
+										</div>
+									</div>
+							<div class="border-top"></div>
+						</div>
+						<div class="flex-wrap">
+							<img src="img/DN-Demo.jpg" class="gallery-item site-demo">
+						</div>
+					</div>
 				</div>
-			</div>
 			<div class="fullview__item" style="background-color: #ffffff">
 					<div class="showcase-container">
 						<div class="first-view">
 							<div class="fullview__item-titlewrap">
-								<h3 class="fullview__item-title">Hobby Projects</h3>
+								<h3 class="fullview__item-title">Ruby – Art Project</h3>
 								<p class="fullview__item-description">visual art / character design / sculpture</p>
 								<div class="fullview__details-container">
 									<h3 class="fullview__details">Year</h3>
@@ -223,7 +254,7 @@
 			</div>
 			<div class="grid__item" data-revealer-color="#fac92f">
 				<h3 class="grid__item-title">
-					<span>Black revelations</span>
+					<span>Dance Network</span>
 				</h3>
 				<span class="grid__item-number">
 					<span>03</span>
@@ -235,13 +266,13 @@
 			</div>
 			<div class="grid__item" data-revealer-color="#fac92f">
 				<h3 class="grid__item-title">
-					<span>Hobby Projects</span>
+					<span>Ruby – Art Project</span>
 				</h3>
 				<span class="grid__item-number">
 					<span>04</span>
 				</span>
 				<div class="grid__item-imgwrap">
-					<img class="grid__item-img" src="img/thumb4.jpg" alt="Hobby Project" />
+					<img class="grid__item-img" src="img/thumb4.jpg" alt="Art Project" />
 					<div class="grid__item-bg" style="background-image: url(img/thumb4.jpg)"></div>
 				</div>
 			</div>
