--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="my_pic-container" style="background-image: url(img/Elena-pic-3.png)">
+		<div class="my_pic-container" style="background-image: url(img/Elena-pic-3.jpg)">
 			<!-- <img class="my-pic" src="img/Elena-pic-3.png"> -->
 		</div>
 	</section>
