cv mobile version

--- a/cv.html
+++ b/cv.html
@@ -26,10 +26,11 @@
 						<div class="cv-block-left">
 							<span class="cv-date">05.2018</span>
 							<div class="vertical-line"></div>
+							<div class="dash">–</div>
 							<span class="cv-date">Present</span>
 						</div>
 						<div class="cv-block-right">
-							<span class="company-name">Fonpit AG</span>
+							<div class="company-name">Fonpit AG</div>
 							<p>As a
 								<b>Senior Visual UI Designer</b> and member of
 								<b>Development Team</b>, performing a managing and
@@ -51,10 +52,11 @@
 						<div class="cv-block-left">
 							<span class="cv-date">03.2017</span>
 							<div class="vertical-line"></div>
+							<div class="dash">–</div>
 							<span class="cv-date">05.2018</span>
 						</div>
 						<div class="cv-block-right">
-							<span class="company-name">orderbird AG</span>
+							<div class="company-name">orderbird AG</div>
 							<p>As a
 								<b>Visual Designer</b> in
 								<b>Marketing Department</b>, I have participated as a co-creative director, concepting and executing various kinds of
@@ -80,10 +82,11 @@
 						<div class="cv-block-left">
 							<span class="cv-date">03.2016</span>
 							<div class="vertical-line"></div>
+							<div class="dash">–</div>
 							<span class="cv-date">03.2017</span>
 						</div>
 						<div class="cv-block-right">
-							<span class="company-name">simplesurance GmbH</span>
+							<div class="company-name">simplesurance GmbH</div>
 							<p>As a
 								<b>Visual Designer</b> my field of responsibility included executing projects for internal needs of the company, as
 								well the client‘s needs:
@@ -103,10 +106,11 @@
 						<div class="cv-block-left">
 							<span class="cv-date">03.2015</span>
 							<div class="vertical-line"></div>
+							<div class="dash">–</div>
 							<span class="cv-date">10.2015</span>
 						</div>
 						<div class="cv-block-right">
-							<span class="company-name">commercetools GmbH</span>
+							<div class="company-name">commercetools GmbH</div>
 							<p>As a
 								<b>Graphic Designer</b> I have supported various projects with graphic assets and materials, such as:
 							</p>
@@ -125,10 +129,11 @@
 						<div class="cv-block-left">
 							<span class="cv-date">07.2014</span>
 							<div class="vertical-line"></div>
+							<div class="dash">–</div>
 							<span class="cv-date">02.2015</span>
 						</div>
 						<div class="cv-block-right">
-							<span class="company-name">Freelance</span>
+							<div class="company-name">Freelance</div>
 							<p>Work including art direction, design, layout, typo-graphy, illustration, storyboards, photo manipulation/retouching,
 								posters, as well as .gifs and static advertising, infographic, layout for multiscreen eco-systems: mobile OS, apps
 								and web.
@@ -139,10 +144,11 @@
 						<div class="cv-block-left">
 							<span class="cv-date">09.2013</span>
 							<div class="vertical-line"></div>
+							<div class="dash">–</div>
 							<span class="cv-date">06.2014</span>
 						</div>
 						<div class="cv-block-right">
-							<span class="company-name">Granit Oak</span>
+							<div class="company-name">Granit Oak</div>
 							<p>As a
 								<b>co-founder</b> and
 								<b>PR Manager</b> of a
@@ -164,10 +170,11 @@
 						<div class="cv-block-left">
 							<span class="cv-date">10.2011</span>
 							<div class="vertical-line"></div>
+							<div class="dash">–</div>
 							<span class="cv-date">08.2013</span>
 						</div>
 						<div class="cv-block-right">
-							<span class="company-name">Asweb</span>
+							<div class="company-name">Asweb</div>
 							<p>As a
 								<b>Web Designer</b> in a small IT-agency, I was working at various web projects, such as:
 							</p>
@@ -190,10 +197,11 @@
 						<div class="cv-block-left">
 							<span class="cv-date">10.2007</span>
 							<div class="vertical-line"></div>
+							<div class="dash">–</div>
 							<span class="cv-date">06.2009</span>
 						</div>
 						<div class="cv-block-right">
-							<span class="company-name">Bachelor’s Degree – Management of Organizations</span>
+							<div class="university-name">Bachelor’s Degree – Management of Organizations</div>
 							<p>
 								<b>Focus:</b> Business Management
 							</p>
@@ -205,10 +213,11 @@
 						<div class="cv-block-left">
 							<span class="cv-date">09.2004</span>
 							<div class="vertical-line"></div>
+							<div class="dash">–</div>
 							<span class="cv-date">06.2009</span>
 						</div>
 						<div class="cv-block-right">
-							<span class="company-name">Bachelor’s Degree – Pedagogy and Methodology of Teaching Foreign Languages</span>
+							<div class="university-name">Bachelor’s Degree – Pedagogy and Methodology of Teaching Foreign Languages</div>
 							<p>
 								<b>Focus:</b> Visual Illustrating and learning Support
 							</p>
@@ -220,10 +229,11 @@
 						<div class="cv-block-left">
 							<span class="cv-date">09.2000</span>
 							<div class="vertical-line"></div>
+							<div class="dash">–</div>
 							<span class="cv-date">05.2004</span>
 						</div>
 						<div class="cv-block-right">
-							<span class="company-name">Visual Arts</span>
+							<div class="university-name">Visual Arts</div>
 							<p>
 								<b>Focus:</b> Business Management
 							</p>
@@ -238,7 +248,9 @@
 					<div>
 						<div class="flex cv-block-container">
 							<div class="tools">
-								<p>HTML / HTML5 / CSS / JS / Vue.js</p>
+								<p>HTML / HTML5</p>
+								<p>CSS</p>
+								<p>JS / Vue.js</p>
 								<p>Sketch</p>
 								<p>InVision</p>
 								<p>Axure</p>
@@ -247,7 +259,7 @@
 								<p>Sublime Text</p>
 								<p>Visual Studio Code</p>
 							</div>
-							<div>
+							<div class="tools">
 								<p>
 									<b>Adobe Creative Cloud:</b>
 								</p>
@@ -268,7 +280,7 @@
 							<h2 class="title">Languages</h2>
 							<div class="space-30"></div>
 						</div>
-						<div class="flex">
+						<div class="langs">
 							<div class="tools">
 								<p>
 									<b>English</b> – Fluent</p>
@@ -277,7 +289,7 @@
 								<p>
 									<b>Russian</b> – Bilingual</p>
 							</div>
-							<div>
+							<div class="tools">
 								<p>
 									<b>French</b> – Conversational (good reading and writing skills)</p>
 								<p>
