added dance network

--- a/cv.html
+++ b/cv.html
@@ -301,7 +301,10 @@
 					</div>
 				</div>
 			</div>
-
+		</div>
+		<div class="mobile-footer">
+				<div class="footer-border-top"></div>
+				<div class="footer-p"><p>Made by Elena Volovicheva</p></div>
 		</div>
 	</section>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
