--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<section class="scrollable">
 		<div class="message">View on a larger screen is recommended</div>
 		<!-- Outer grid (header, title, etc.) -->
-		<div class="grid-scrollable grid--outer">
+		<div class="grid-scrollable grid--outer pic-as-bg" style="background-image: url(img/Elena-pic-3.jpg)">
 			<div class="title-wrap">
 				<h2 class="title">Elena Volovicheva</h2>
 				<span class="profession">designer / artist / frontend-developer</span>
@@ -37,11 +37,10 @@
 				<div class="button">
 					<a href="works.html" class="btn">see my works</a>
 				</div>
+				<div><h3 class="fullview__title-mobile">Made by Elena Volovicheva</h3></div>
 			</div>
 		</div>
-		<div class="my_pic-container" style="background-image: url(img/Elena-pic-3.jpg)">
-			<!-- <img class="my-pic" src="img/Elena-pic-3.png"> -->
-		</div>
+		<!-- <div class="my_pic-container" style="background-image: url(img/Elena-pic-3.jpg)"></div> -->
 	</section>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
 	<script src="js/TweenMax.min.js"></script>
