--- a/works.html
+++ b/works.html
@@ -9,7 +9,23 @@
 	<meta name="keywords" content="elena volovicheva, portfolio, designer, visual designer, web designer, designer berlin, front-end developer, front end developer"
 	/>
 	<meta name="author" content="Elena Volovicheva" />
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<script>document.documentElement.className = "js"; var supportsCssVars = function () { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e }; supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 </head>
@@ -42,6 +58,7 @@
 			<div class="fullview__item" style="background-color: #ffffff">
 				<div class="showcase-container">
 					<div class="first-view">
+						<span class="fullview__item-number">01</span>
 						<div class="fullview__item-titlewrap">
 							<h3 class="fullview__item-title">Marketing Campaign</h3>
 							<p class="fullview__item-description">design / direction / development</p>
@@ -129,6 +146,17 @@
 				<div class="preview-container">
 					<img src="img/Funnel-preview.png" class="preview">
 				</div>
+				<div class="border-top"></div>
+				<div class="fullview__item-h3">
+					<h3 class="fullview__item-title">"Paris Nuits" Magazine Advetorial</h3>
+				</div>
+				<div class="preview-container">
+					<img src="img/Magazine.png"  id="paris-nuits" class="preview">
+				</div>
+				<div class="border-top"></div>
+				</div>
+				<div class="mobile-demo-container">
+					<img src="img/marketing-preview.png" class="mobile-demo-1">
 				</div>
 			</div>
 			<div class="fullview__item" style="background-image: url(img/2.jpg)">
@@ -143,6 +171,7 @@
 			<div class="fullview__item" style="background-color: #ffffff">
 					<div class="showcase-container">
 						<div class="first-view">
+								<span class="fullview__item-number">03</span>
 								<div class="fullview__item-titlewrap">
 										<h3 class="fullview__item-title">Dance Network</h3>
 										<p class="fullview__item-description">design / direction / development</p>
@@ -174,13 +203,17 @@
 							<div class="border-top"></div>
 						</div>
 						<div class="flex-wrap">
-							<img src="img/DN-Demo.jpg" class="gallery-item site-demo">
+							<img src="img/DN-Demo.png" class="gallery-item site-demo">
 						</div>
+					</div>
+					<div class="mobile-demo-container">
+						<img src="img/DN-Demo-m.png" class="mobile-demo">
 					</div>
 				</div>
 			<div class="fullview__item" style="background-color: #ffffff">
 					<div class="showcase-container">
 						<div class="first-view">
+							<span class="fullview__item-number">04</span>
 							<div class="fullview__item-titlewrap">
 								<h3 class="fullview__item-title">Ruby – Art Project</h3>
 								<p class="fullview__item-description">visual art / character design / sculpture</p>
@@ -220,8 +253,12 @@
 							<img src="img/Ruby-6.jpg" class="gallery-item">
 						</div>
 					</div>
+					<div class="mobile-footer">
+						<div class="footer-border-top"></div>
+						<div class="footer-p"><p>Made by Elena Volovicheva</p></div>
+					</div>
 				</div>
-			<h3 class="fullview__title">Elena Volovicheva</h3>
+			<h3 class="fullview__title">Made by Elena Volovicheva</h3>
 		</div>
 		<!--/fullview-->
 		<!-- Revealer element -->
@@ -236,8 +273,8 @@
 					<span>01</span>
 				</span>
 				<div class="grid__item-imgwrap">
-					<img class="grid__item-img" src="img/Project-1-Visual.png" alt="Some image" />
-					<div class="grid__item-bg" style="background-image: url(img/Project-1-Visual.png)"></div>
+					<img class="grid__item-img" src="img/Project-1-Visual-2.png" alt="Some image" />
+					<!-- <div class="grid__item-bg" style="background-image: url(img/Project-1-Visual-2.png)"></div> -->
 				</div>
 			</div>
 			<div class="grid__item" data-revealer-color="#fac92f">
@@ -260,8 +297,8 @@
 					<span>03</span>
 				</span>
 				<div class="grid__item-imgwrap">
-					<img class="grid__item-img" src="img/thumb3.jpg" alt="Some image" />
-					<div class="grid__item-bg" style="background-image: url(img/thumb3.jpg)"></div>
+					<img class="grid__item-img" src="img/Project-3-Visual.png" alt="Some image" />
+					<!-- <div class="grid__item-bg" style="background-image: url(img/thumb3.jpg)"></div> -->
 				</div>
 			</div>
 			<div class="grid__item" data-revealer-color="#fac92f">
