create contact page

--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -303,9 +304,12 @@
 			</div>
 		</div>
 		<div class="mobile-footer">
-				<div class="footer-border-top"></div>
-				<div class="footer-p"><p>Made by Elena Volovicheva</p></div>
+			<div class="footer-border-top"></div>
+			<div class="footer-p">
+				<p>Made by Elena Volovicheva</p>
+			</div>
 		</div>
+		<h3 class="fullview__title">Made by Elena Volovicheva</h3>
 	</section>
 	<script src="js/imagesloaded.pkgd.min.js"></script>
 	<script src="js/TweenMax.min.js"></script>
